app.py now displays tweets along w/ trends

--- a/templates/results.html
+++ b/templates/results.html
@@ -5,7 +5,14 @@
     <li>
     {{trend["name"]}}
     </li>
-    {%endfor%}
+    <ul>
+      {% for tweet in trend["tweets"] %}
+      <li>
+	{{tweet}}
+      </li>
+      {% endfor %}
+    </ul>
+    {% endfor %}
     </ol>
 </body>
 </html>
