--- a/templates/display.html
+++ b/templates/display.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{{trend[0]["name"]}}</title>
+<title>{{trend}}</title>
 <meta charset="UTF-8">
 </head>
 <body>
