--- a/templates/display.html
+++ b/templates/display.html
@@ -7,6 +7,6 @@
 <body>
 <iframe width="640" height="480" frameborder="0" seamless="seamless" scrolling="no" src="{{ploturl}}.embed?width=640&height=480" ></iframe>
 
-<p>{{topTweet}}</p>
+<p>{{topTweet[0]}} <b> tweeting from </b> {{topTweet[1]}}</p>
 </body>
 </html>
