Trying to create a function that returns both graphs

--- a/templates/display.html
+++ b/templates/display.html
@@ -5,7 +5,8 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<iframe width="640" height="480" frameborder="0" seamless="seamless" scrolling="no" src="{{ploturl}}.embed?width=640&height=480" ></iframe>
+<iframe width="640" height="480" frameborder="0" seamless="seamless" scrolling="no" src="{{ploturl0}}.embed?width=640&height=480" ></iframe>
+<iframe width="640" height="480" frameborder="0" seamless="seamless" scrolling="no" src="{{ploturl1}}.embed?width=640&height=480" ></iframe>
 
 <p>{{topTweet[0]}} <b> tweeting from </b> {{topTweet[1]}}</p>
 </body>
